tests/rosetta/out/C/bulls-and-cows.error
cc: exit status 1
/tmp/bulls-and-cows.c: In function ‘mochi_main’:
/tmp/bulls-and-cows.c:114:22: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  114 |       digits.data[0] + digits.data[1] + digits.data[2] + digits.data[3];
      |       ~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~
      |                  |                |
      |                  char *           char *
/tmp/bulls-and-cows.c:138:41: error: ‘pat’ undeclared (first use in this function)
  138 |       __auto_type pos = index_of_string(pat, cg);
      |                                         ^~~
/tmp/bulls-and-cows.c:138:41: note: each undeclared identifier is reported only once for each function it appears in
/tmp/bulls-and-cows.c:139:11: error: ‘pos’ undeclared (first use in this function)
  139 |       if (pos == ((-1))) {
      |           ^~~
