tests/rosetta/out/C/bulls-and-cows.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:47Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:47Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <time.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_input() {
  char buf[1024];
  if (!fgets(buf, sizeof(buf), stdin))
    return strdup("");
  size_t len = strlen(buf);
  if (len > 0 && buf[len - 1] == '\n')
    buf[len - 1] = '\0';
  return strdup(buf);
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static long long _now() {
  struct timespec ts;
  clock_gettime(CLOCK_REALTIME, &ts);
  return (long long)ts.tv_sec * 1000000000LL + ts.tv_nsec;
}
static int index_of_string(char *s, char *sub) {
  char *pos = strstr(s, sub);
  if (!pos)
    return -1;
  return pos - s;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int indexOf(char *s, char *ch) {
  __auto_type i = 0;
  while (i < strlen(s)) {
    if ((strcmp(slice_string(s, i, i + 1), ch) == 0)) {
      return i;
    }
    i = i + 1;
  }
  return (-1);
}

list_string shuffle(list_string xs) {
  __auto_type arr = xs;
  __auto_type i = arr.len - 1;
  while (i > 0) {
    long long j = _now() % (i + 1);
    __auto_type tmp = arr.data[i];
    arr.data[i] = arr.data[j];
    arr.data[j] = tmp;
    i = i - 1;
  }
  return arr;
}

int mochi_main() {
  printf("Cows and Bulls\n");
  printf("Guess four digit number of unique digits in the range 1 to 9.\n");
  printf("A correct digit but not in the correct place is a cow.\n");
  printf("A correct digit in the correct place is a bull.\n");
  list_string digits = list_string_create(9);
  digits.data[0] = "1";
  digits.data[1] = "2";
  digits.data[2] = "3";
  digits.data[3] = "4";
  digits.data[4] = "5";
  digits.data[5] = "6";
  digits.data[6] = "7";
  digits.data[7] = "8";
  digits.data[8] = "9";
  digits = shuffle(digits);
  __auto_type pat =
      digits.data[0] + digits.data[1] + digits.data[2] + digits.data[3];
  __auto_type valid = "123456789";
  while (1) {
    printf("Guess: \n");
    __auto_type guess = _input();
    if (strlen(guess) != 4) {
      printf("Please guess a four digit number.\n");
      continue;
    }
    __auto_type cows = 0;
    __auto_type bulls = 0;
    __auto_type seen = "";
    __auto_type i = 0;
    __auto_type malformed = 0;
    while (i < 4) {
      __auto_type cg = slice_string(guess, i, i + 1);
      if (index_of_string(seen, cg) != ((-1))) {
        char *tmp1 = concat_string("Repeated digit: ", cg);
        printf("%s\n", tmp1);
        malformed = 1;
        break;
      }
      char *tmp2 = concat_string(seen, cg);
      seen = tmp2;
      __auto_type pos = index_of_string(pat, cg);
      if (pos == ((-1))) {
        if (index_of_string(valid, cg) == ((-1))) {
          char *tmp3 = concat_string("Invalid digit: ", cg);
          printf("%s\n", tmp3);
          malformed = 1;
          break;
        }
      } else {
        if (pos == i) {
          bulls = bulls + 1;
        } else {
          cows = cows + 1;
        }
      }
      i = i + 1;
    }
    if (malformed) {
      continue;
    }
    char *tmp4 = _str(cows);
    char *tmp5 = concat_string("Cows: ", tmp4);
    char *tmp6 = concat_string(tmp5, ", bulls: ");
    char *tmp7 = _str(bulls);
    char *tmp8 = concat_string(tmp6, tmp7);
    printf("%s\n", tmp8);
    if (bulls == 4) {
      printf("You got it.\n");
      break;
    }
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
